Made i possible to upload a picture through the upload page

--- a/public/frontpage/frontpage.html
+++ b/public/frontpage/frontpage.html
@@ -1,8 +1,9 @@
 <script src="/frontpage/frontpage.js"></script>
-<h3 class="display-4">Welcome to my mandatory 2</h3>
+<h3 class="display-4">Welcome to CarZone</h3>
 
-<div>
-    <h1>
-        This is a test
-    </h1>
+<div class="container float-left" style="width: 25%;">
+    <ul class="list-group list-group-flush" id="photo-gallery">
+        <li class="list-group-item list-group-item-action mb-2"><h4 class="display-6">Pictures</h4></li>
+        
+    </ul>
 </div>
