--- a/public/navbar/navbar.html
+++ b/public/navbar/navbar.html
@@ -1,20 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="../global.css">
     <title>Mandatory 2</title>
 </head>
+
 <body>
     <nav class="navbar navbar-light bg-light">
 
         <a class="nav-item" href="/">
-            <img id="logo" src="/navbar/***" alt="Keatube" style="width: 20%;"></img>
+            <img id="logo" src="/navbar/kea-logo.png" alt="Home" style="width: 20%;"></img>
         </a>
 
+        <a class="nav-item " id="upload-link" href="/upload">
+            <p>Upload video</p>
+        </a>
     </nav>
+
+
 
     <div id="main-content">
