A lot of stuff have happened. Fronpage design update, different lists are now alligend horizontaly. The videos are soreted in the lists by category. Created sign up page and sign in page

--- a/public/footer/footer.html
+++ b/public/footer/footer.html
@@ -1,12 +1,13 @@
 </div>
-    
+
 <footer>
-    <p style="font-size: 1rem;" id="copyright">Copyright (C)</p>
+    <p style="font-size: 1rem;" id="copyright">Copyright&copy </p>
 </footer>
 <script>
     const currentYear = new Date().getFullYear();
 
-    $("#copyright").text("Copyright (C) " + currentYear);
+    $("#copyright").append(currentYear);
 </script>
 </body>
+
 </html>
