--- a/public/frontpage/frontpage.html
+++ b/public/frontpage/frontpage.html
@@ -1,9 +1,37 @@
 <script src="/frontpage/frontpage.js"></script>
 <h3 class="display-4">Welcome to CarZone</h3>
 
-<div class="container float-left" style="width: 25%;">
-    <ul class="list-group list-group-flush" id="photo-gallery">
-        <li class="list-group-item list-group-item-action mb-2"><h4 class="display-6">Pictures</h4></li>
-        
-    </ul>
+
+<div class="d-flex">
+    <div class="container">
+        <ul class="list-group list-group-flush" id="picture-gallery-cars">
+            <li class="list-group-item list-group-item-action mb-2">
+                <h4 class="display-6">Cars</h4>
+            </li>
+        </ul>
+    </div>
+
+    <div class="container">
+        <ul class="list-group list-group-flush" id="picture-gallery-motorcycles">
+            <li class="list-group-item list-group-item-action mb-2">
+                <h4 class="display-6">Motorcycles</h4>
+            </li>
+        </ul>
+    </div>
+
+    <div class="container">
+        <ul class="list-group list-group-flush" id="picture-gallery-racing">
+            <li class="list-group-item list-group-item-action mb-2">
+                <h4 class="display-6">Racing cars</h4>
+            </li>
+        </ul>
+    </div>
+
+    <div class="container">
+        <ul class="list-group list-group-flush" id="picture-gallery-custom">
+            <li class="list-group-item list-group-item-action mb-2">
+                <h4 class="display-6">Custom builds</h4>
+            </li>
+        </ul>
+    </div>
 </div>
