--- a/public/navbar/navbar.html
+++ b/public/navbar/navbar.html
@@ -7,8 +7,13 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+        <link rel="canonical" href="https://getbootstrap.com/docs/4.0/examples/sign-in/">
+
+    <!-- Custom styles for this template -->
+    <link href="signin.css" rel="stylesheet">
+    <link href="signup.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="../global.css">
-    <title>Mandatory 2</title>
+    <title>CarZone</title>
 </head>
 
 <body>
@@ -22,7 +27,5 @@
             <p>Upload video</p>
         </a>
     </nav>
-
-
 
     <div id="main-content">
