--- a/public/upload/upload.html
+++ b/public/upload/upload.html
@@ -50,14 +50,10 @@
                 </div>
                 <select name="category" class="custom-select" id="inputGroupSelect01">
                     <option selected>Choose...</option>
-                    <option value="animals">Animals</option>
-                    <option value="food">Food</option>
-                    <option value="games">Games</option>
-                    <option value="nature">Nature</option>
-                    <option value="science">Science</option>
-                    <option value="scifi">Sci-fi</option>
-                    <option value="sports">Sports</option>
-                    <option value="vehicle">Vehicle</option>
+                    <option value="car">Car</option>
+                    <option value="motorcycle">Motorcycle</option>
+                    <option value="racing">Racing car</option>
+                    <option value="custom">Custom build</option>
                 </select>
             </div>
 
