Lots of work have been done. Primarely database related work with knex.js and added routes for creating users and getting users

--- a/public/navbar/navbar.html
+++ b/public/navbar/navbar.html
@@ -24,7 +24,7 @@
         </a>
 
         <a class="nav-item " id="upload-link" href="/upload">
-            <p>Upload video</p>
+            <p>Upload picture</p>
         </a>
     </nav>
 
