--- a/public/signin/signin.html
+++ b/public/signin/signin.html
@@ -1,15 +1,18 @@
+<link href="./signin.css" rel="stylesheet">
 <div class="text-center" id="signin-div">
-    <form class="form-signin">
-        <img class="mb-4" src="https://getbootstrap.com/docs/4.0/assets/brand/bootstrap-solid.svg" alt="" width="72"
+    <form class="form-signin" action="/signin" method="POST">
+        <img class="mb-4" src="./race-car-309123_1280.png" alt="" width="72"
             height="72">
         <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
         <label for="inputEmail" class="sr-only">Email address</label>
-        <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
+        <input name="email" type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
         <label for="inputPassword" class="sr-only">Password</label>
-        <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
+        <input name="password" type="password" id="inputPassword" class="form-control" placeholder="Password" required>
         <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
-        <a href="/signup">Sign up</a>
 
     </form>
+
+    <a href="/signup">Sign up</a>
+    
 </div>
 
