--- a/public/signup/signup.html
+++ b/public/signup/signup.html
@@ -1,3 +1,5 @@
+<link href="./signup.css" rel="stylesheet">
+
 <div class="signup-form">	
     <form action="/signup" method="post">
 		<h2>Create Account</h2>
@@ -15,11 +17,6 @@
 		<div class="form-group">
 			<div class="input-group">
 				<input type="text" class="form-control" name="password" placeholder="Password" required="required">
-			</div>
-        </div>
-		<div class="form-group">
-			<div class="input-group">
-				<input type="text" class="form-control" name="confirm_password" placeholder="Confirm Password" required="required">
 			</div>
         </div>        
 		<div class="form-group">
